 
SOFTWARE QUALITY:

 o Now the package tests future.batchtools with foreach by itself, in
   combination with plyr (parallel = TRUE) as well as with
   BiocParallel::bplapply() and friends.  Similar tests are already done
   using future.BatchJobs.

 o Added test for foreach::times() %dopar% { ... }.  Especially, it is
   now tested that global variables are properly identified.  Note that
   it is not possible to specify neither globals not package in times().

 o ROBUSTNESS: The package redundancy tests (not run by 'R CMD check'; needed
   to be run manually for now) that run 89 plyr examples with the doFuture
   foreach adaptor, , now forces testing of '.parallel = TRUE' for all plyr
   functions that support that argument.  Each example is run across various
   future strategies, including sequential, multicore, multisession, and
   cluster, as well as batchjobs_local and batchtools_local, if installed.
   See doFuture 0.2.0 notes below for how to run these tests.
   

Version: 0.3.0 [2016-10-27]

NEW FEATURES:

 o Now argument '.export' of foreach() is acknowledged such that if
   a character vector of variables names to be exported is specified,
   then those variables and nothing else are exported to future.
   If NULL, then automatic lookup of global variables is used.

BUG FIXES:

 o Nested future strategies were not respected by nested %dopar% calls,
   because doFuture forgot to remind foreach that doFuture should be used
   also deeper down.  Thank you Alex Vorobiev for reporting on this.
   
 
Version: 0.2.1 [2016-09-07]

BUG FIXES:

 o Internal R expression created to attach packages was not fully correct
   (but it still worked).
 
 
Version: 0.2.0 [2016-06-25]

SOFTWARE QUALITY:

 o ROBUSTNESS: Added package redundancy tests that runs all examples
   of the 'foreach' and the 'plyr' packages using doFuture and all
   known types of futures.  These tests are not package tests and
   need to be run manually.  The test scripts are available in package