@@ -2,7 +2,7 @@ Package: doFuture
 Version: 0.3.0-9000
 Title: Foreach Parallel Adaptor using the Future API of the 'future' Package
 Depends:
-    future (>= 1.3.0),
+    future (>= 1.4.0),
     foreach (>= 1.4.3),
     iterators (>= 1.0.8),
     parallel,
