@@ -97,10 +97,8 @@ doFuture <- function(obj, expr, envir, data) {
 
   ## At this point a globals should be resolved and we should know
   ## their total size.
-  assert_resolved <- (packageVersion("future") >= "1.4.0")
-  if (assert_resolved) {
-    stopifnot(attr(globals, "resolved"), !is.na(attr(globals, "total_size")))
-  }
+  ## NOTE: This is 1st of the 2 places where we req future (>= 1.4.0)
+  stopifnot(attr(globals, "resolved"), !is.na(attr(globals, "total_size")))
   ## Also make sure we've got our in-house '...future.x_ii' covered.
   stopifnot("...future.x_ii" %in% names(globals))
 
@@ -130,7 +128,8 @@ doFuture <- function(obj, expr, envir, data) {
     ## Subsetting outside future is more efficient
     globals_ii <- globals
     globals_ii[["...future.x_ii"]] <- argsList[chunk]
-    if (assert_resolved) stopifnot(attr(globals_ii, "resolved"))
+    ## NOTE: This is 2nd of the 2 places where we req future (>= 1.4.0)
+    stopifnot(attr(globals_ii, "resolved"))
 
     fs[[ii]] <- future(expr, substitute = FALSE, envir = envir,
                        globals = globals_ii, packages = packages)
